# fer_ros2_simulation

./: .dockerignore  .gitignore  CMakeLists.txt  DDS_Profiles.md  LICENSE  README.md  THIRDPARTY.md  fer_ros2_mjc.repos  fer_ros2_mujoco.repos  package.xml
.docker/: Dockerfile  build_image.sh  run_container.sh
docker/: Dockerfile  build_image.sh  run_container.sh
env/: cyclone_dds udp.xml  cyclone_dds.xml
include/fer_fl_controller/: casadi_qp_wrapper.h  casadi_qp_wrapper_obstacle.h  trajectory_generator.hpp  waypoint_sets.hpp
my_controllers/fer_fl_controller/: CMakeLists.txt  package.xml
my_controllers/fer_fl_controller/src/: feedback_linearization_node.cpp
plotting/: pid_logger.py  pid_waypoint_runner.py  plot_mpc_coupled.py  plot_mpc_results.py  plot_pid.py
ros2_ws/: plot_fl_results.py  plot_mpc_coupled.py
ros2_ws/src/fer_fl_controller/: CMakeLists.txt
ros2_ws/src/fer_fl_controller/include/fer_fl_controller/: casadi_qp_wrapper.h  trajectory_generator.hpp
ros2_ws/src/fer_fl_controller/src/: casadi_qp_wrapper.cpp  feedback_linearization_node.cpp  fk_ik_waypoint_tester.cpp  mpc_controller_node.cpp  mpc_coupled_qp_node.cpp
src/: casadi_qp_wrapper.cpp  casadi_qp_wrapper_obstacle.cpp  fk_ik_waypoint_tester.cpp  mpc_controller_node.cpp  mpc_coupled_qp_node.cpp  mpc_coupled_qp_obstacle_node.cpp
tools/plotting/: plot_fl_results.py
