<?xml version="1.0"?>
<package format="3">
  <name>fer_fl_controller</name>
  <version>0.0.0</version>
  <description>Feedback linearization controller for FER</description>
  <maintainer email="fer_ros2_sim@todo.todo">fer_ros2_sim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>casadi</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>